Update obsidian-base.scss - Really fix blurry Safari GIF

--- a/src/site/styles/obsidian-base.scss
+++ b/src/site/styles/obsidian-base.scss
@@ -2397,7 +2397,7 @@ body {
     object-fit: cover;
     border-radius: var(--radius-s);
     aspect-ratio: 16/9;
-    image-rendering: -webkit-optimize-contrast;
+    // image-rendering: -webkit-optimize-contrast;
   }
   .community-item-screenshot.mod-unavailable {
     text-align: center;
@@ -6662,7 +6662,7 @@ body {
   .markdown-preview-view img,
   .markdown-rendered img {
     -webkit-touch-callout: default;
-    image-rendering: -webkit-optimize-contrast;
+    // image-rendering: -webkit-optimize-contrast;
   }
   .markdown-preview-view img:not([width]),
   .markdown-rendered img:not([width]) {
